fix(ui): fix gap between checkbox and label

--- a/src/app/ui/Checkbox/Checkbox.module.scss
+++ b/src/app/ui/Checkbox/Checkbox.module.scss
@@ -2,12 +2,17 @@
 
 .label {
     display: flex;
-    gap: toRem(6);
-    font-size: toRem(18);
+    gap: toRem(8);
+    font-size: toRem(20);
+    align-items: center;
+
+    cursor: pointer;
 }
 
 .checkbox {
     accent-color: var(--black);
     width: toRem(24);
     height: toRem(24);
+
+    cursor: pointer;
 }
